--- a/lib/phoenix_stripe_web/components/layouts/root.html.heex
+++ b/lib/phoenix_stripe_web/components/layouts/root.html.heex
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" class="[scrollbar-gutter:stable]">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="csrf-token" content={get_csrf_token()} />
+<html lang="en" class="[scrollbar-gutter:stable]"> <head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="csrf-token" content={get_csrf_token()}/>
     <.live_title suffix=" · Phoenix Framework">
       <%= assigns[:page_title] || "PhoenixStripe" %>
     </.live_title>
-    <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
+    <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"}/>
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
+    <script src="https://js.stripe.com/v3/"></script>
+    <script>
+      window.stripePublishableKey = "<%= System.get_env("STRIPE_PUBLISHABLE_KEY") %>";
+    </script>
   </head>
-  <body class="bg-white">
+  <body class="bg-white antialiased">
     <%= @inner_content %>
   </body>
 </html>
